tests/03-typecheck/05-data-field-redefined.sl
data ivec2 (int x, int y)

func ivec2.x (ivec2) (ivec2) in
end
